--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "splash": {
       "image": "./assets/images/quizicon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#5b9df9"
     },
     "ios": {
       "supportsTablet": true,
@@ -21,7 +21,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/quizicon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#5b9df9"
       },
       "package": "com.apoorvsingh.flashcardquiz"
     },
