--- a/package.json
+++ b/package.json
@@ -15,45 +15,40 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-    "expo": "53.0.12",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.6",
-    "expo-dev-client": "~5.2.1",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
-    "expo-splash-screen": "~0.30.9",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
-    "expo-web-browser": "~14.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "~2.24.0",
+    "@expo/vector-icons": "^15.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "expo": "^50.0.0",
+    "expo-blur": "~12.9.2",
+    "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.8",
+    "expo-font": "~11.10.2",
+    "expo-haptics": "~12.8.1",
+    "expo-linear-gradient": "~12.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-web-browser": "~12.8.2",
+    "firebase": "^10.8.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-particles": "^0.0.8",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~53.0.0",
-    "react-test-renderer": "19.0.0",
+    "@babel/core": "^7.23.0",
+    "@types/react": "~18.2.45",
+    "jest": "^29.7.0",
+    "jest-expo": "~50.0.0",
     "typescript": "^5.3.0"
   },
   "private": true
